// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot simulation 1`] = `
Array [
  Object {
    "angle": 0.22543185800883217,
    "id": 1,
    "status": 0,
    "type": "person",
    "x": 416.99731365497905,
    "y": 473.85124883041834,
  },
  Object {
    "angle": 4.811582680658551,
    "id": 2,
    "infected_until": 585.8699470626841,
    "status": 1,
    "type": "person",
    "x": 5.772926384371638,
    "y": 25.577609916755566,
  },
]
`;

exports[`Snapshot simulation 2`] = `
Array [
  Object {
    "angle": 0.22543185800883217,
    "id": 1,
    "status": 0,
    "type": "person",
    "x": 417.9720113208815,
    "y": 474.0747761443743,
  },
  Object {
    "angle": 4.811582680658551,
    "id": 2,
    "infected_until": 585.8699470626841,
    "status": 1,
    "type": "person",
    "x": 5.871957497067613,
    "y": 24.582525579265425,
  },
]
`;
